--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.zhang.nexustest"
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,12 +25,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.appcompat:appcompat:1.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 //    implementation 'com.dr:nexuslibrary:1.0.3'
-    implementation 'com.keepon.util:nexuslibrary:1.0.1'
+    implementation ('com.github.bumptech.glide:glide:4.9.0',
+            {
+                exclude group: 'androidx.fragment'
+            })
+    implementation ('jp.wasabeef:glide-transformations:4.0.0',
+            {
+
+            })
 }
