--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.3.31'
     repositories {
-        mavenLocal()
         maven {
-            url 'http://repo.yypm.com:8181/repository/maven-releases/'
-            credentials {
-                username 'admin'
-                password '123456'
-            }
+            url "http://repo.yypm.com:8181/nexus/content/groups/public"
         }
         google()
         jcenter()
@@ -24,13 +19,8 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
         maven {
-            url 'http://repo.yypm.com:8181/repository/maven-releases/'
-            credentials {
-                username 'admin'
-                password '123456'
-            }
+            url "http://repo.yypm.com:8181/nexus/content/groups/public"
         }
         google()
         jcenter()
